ci: update Rust toolchain action, add Windows test steps, and update license copyright.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Cache cargo
         uses: actions/cache@v4
@@ -53,7 +53,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install maturin
         run: pip install maturin
@@ -61,7 +61,15 @@ jobs:
       - name: Build wheel
         run: maturin build --release
 
-      - name: Install and test import
+      - name: Install and test import (Unix)
+        if: runner.os != 'Windows'
         run: |
           pip install target/wheels/*.whl
+          python -c "import llmao; print('Version:', llmao.__version__)"
+
+      - name: Install and test import (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          $wheel = Get-ChildItem target/wheels/*.whl | Select-Object -First 1
+          pip install $wheel.FullName
           python -c "import llmao; print('Version:', llmao.__version__)"
