refactor: rename project and package from `llmao` to `llmao-py` across configuration, build, and documentation.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
     if: github.event_name == 'release'
     environment:
       name: pypi
-      url: https://pypi.org/p/llmao
+      url: https://pypi.org/p/llmao-py
     permissions:
       id-token: write
     steps:
