fix: use correct package name llmao_py in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,11 +65,11 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           pip install target/wheels/*.whl
-          python -c "import llmao; print('Version:', llmao.__version__)"
+          python -c "from llmao_py import LLMClient; print('Import OK')"
 
       - name: Install and test import (Windows)
         if: runner.os == 'Windows'
         run: |
           $wheel = Get-ChildItem target/wheels/*.whl | Select-Object -First 1
           pip install $wheel.FullName
-          python -c "import llmao; print('Version:', llmao.__version__)"
+          python -c "from llmao_py import LLMClient; print('Import OK')"
